{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 112,
  "lineage": "950f95af-9a44-e2f7-ef6c-f9635cbe7d6d",
  "resources": [
    {
      "module": "module.ec2_us_east_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e8b3e527208c8cf",
            "arn": "arn:aws:ec2:us-east-1:446984967484:instance/i-05d3e0b36738ac1ed",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d3e0b36738ac1ed",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09599adab6ce0e868",
            "private_dns": "ip-10-0-1-26.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.26",
            "public_ip": "54.90.159.242",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f14039ba6fb5cb9f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b4f3791d8006df65",
            "tags": {
              "Name": "Accuknox-EC2"
            },
            "tags_all": {
              "Name": "Accuknox-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-080f9bc9f6c0dcbdc"
            ]
          },
          "dependencies": [
            "module.ec2_us_east_1.aws_key_pair.main",
            "module.vpc_us_east_1.aws_security_group.main",
            "module.vpc_us_east_1.aws_subnet.public",
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_us_east_2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db513e73ed5a7faa",
            "arn": "arn:aws:ec2:us-east-2:446984967484:instance/i-034d0bbdb3dc40bb7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034d0bbdb3dc40bb7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c94c0b25e1fa8c4d",
            "private_dns": "ip-10-0-1-55.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.55",
            "public_ip": "13.59.122.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a064334dbc470e2e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0357e0a8ffe834de4",
            "tags": {
              "Name": "Accuknox-EC2"
            },
            "tags_all": {
              "Name": "Accuknox-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-096f8bd7e0d59b76d"
            ]
          },
          "dependencies": [
            "module.ec2_us_east_2.aws_key_pair.main",
            "module.vpc_us_east_2.aws_security_group.main",
            "module.vpc_us_east_2.aws_subnet.public",
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446984967484:internet-gateway/igw-0a423f431eaee25eb",
            "id": "igw-0a423f431eaee25eb",
            "owner_id": "446984967484",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0105183973f5dc19c"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446984967484:route-table/rtb-09873247c81a96b72",
            "id": "rtb-09873247c81a96b72",
            "owner_id": "446984967484",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a423f431eaee25eb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0105183973f5dc19c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_internet_gateway.main",
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d154c111f0a1dba",
            "route_table_id": "rtb-09873247c81a96b72",
            "subnet_id": "subnet-0b4f3791d8006df65"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_internet_gateway.main",
            "module.vpc_us_east_1.aws_route_table.public",
            "module.vpc_us_east_1.aws_subnet.public",
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446984967484:security-group/sg-080f9bc9f6c0dcbdc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080f9bc9f6c0dcbdc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240609104836454800000001",
            "name_prefix": "terraform-",
            "owner_id": "446984967484",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group"
            },
            "tags_all": {
              "Name": "security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0105183973f5dc19c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446984967484:subnet/subnet-01aebf974d3c8ae04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01aebf974d3c8ae04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446984967484",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0105183973f5dc19c"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446984967484:subnet/subnet-0b4f3791d8006df65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4f3791d8006df65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "446984967484",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0105183973f5dc19c"
          },
          "dependencies": [
            "module.vpc_us_east_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446984967484:vpc/vpc-0105183973f5dc19c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04432391754ff550f",
            "default_route_table_id": "rtb-02c25b4537c492816",
            "default_security_group_id": "sg-0de8d364f6cb4f695",
            "dhcp_options_id": "dopt-0bce23ae8912d4fcb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0105183973f5dc19c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c25b4537c492816",
            "owner_id": "446984967484",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:446984967484:internet-gateway/igw-050b77dd415944654",
            "id": "igw-050b77dd415944654",
            "owner_id": "446984967484",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-00b8e9ce36cfccd18"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:446984967484:route-table/rtb-0c00acbf9dfe03c9b",
            "id": "rtb-0c00acbf9dfe03c9b",
            "owner_id": "446984967484",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-050b77dd415944654",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b8e9ce36cfccd18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_2.aws_internet_gateway.main",
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035c880e1612f7b8a",
            "route_table_id": "rtb-0c00acbf9dfe03c9b",
            "subnet_id": "subnet-0357e0a8ffe834de4"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_internet_gateway.main",
            "module.vpc_us_east_2.aws_route_table.public",
            "module.vpc_us_east_2.aws_subnet.public",
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:446984967484:security-group/sg-096f8bd7e0d59b76d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-096f8bd7e0d59b76d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240609104836846400000001",
            "name_prefix": "terraform-",
            "owner_id": "446984967484",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group"
            },
            "tags_all": {
              "Name": "security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00b8e9ce36cfccd18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:446984967484:subnet/subnet-051e49ed65f3a323b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-051e49ed65f3a323b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446984967484",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-00b8e9ce36cfccd18"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:446984967484:subnet/subnet-0357e0a8ffe834de4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0357e0a8ffe834de4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "446984967484",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-00b8e9ce36cfccd18"
          },
          "dependencies": [
            "module.vpc_us_east_2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_us_east_2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_east_2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:446984967484:vpc/vpc-00b8e9ce36cfccd18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b6b6623ca2767c70",
            "default_route_table_id": "rtb-0b6a2bbec299338f4",
            "default_security_group_id": "sg-0f1d26d61d25cc46c",
            "dhcp_options_id": "dopt-04fbe3a8ffb21fec7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00b8e9ce36cfccd18",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6a2bbec299338f4",
            "owner_id": "446984967484",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}